[gd_scene load_steps=4 format=3 uid="uid://bw8yt8bjgi7ll"]

[ext_resource type="PackedScene" uid="uid://csqccm68ep7ox" path="res://Assets/Models/hand_model.tscn" id="1_rp26j"]
[ext_resource type="Script" uid="uid://crc4blo760i8j" path="res://Scripts/default_hand.gd" id="1_wdyf8"]

[sub_resource type="SphereShape3D" id="SphereShape3D_wdyf8"]
radius = 0.2

[node name="DefaultHand" type="Node3D" groups=["Hand"]]
script = ExtResource("1_wdyf8")

[node name="MaxPosArea" type="Area3D" parent="."]
collision_layer = 8
collision_mask = 4

[node name="CollisionShape3D" type="CollisionShape3D" parent="MaxPosArea"]
visible = false
shape = SubResource("SphereShape3D_wdyf8")

[node name="HandPos" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.9999997, 0, 0, 0, 0.9999997, 0, 0, 0)

[node name="HandModel" parent="HandPos" instance=ExtResource("1_rp26j")]
transform = Transform3D(1, 0, 0, 0, 0.7071066, -0.7071067, 0, 0.7071067, 0.7071066, 0, 0, 0)

[connection signal="body_entered" from="MaxPosArea" to="." method="_on_max_pos_body_entered"]
[connection signal="body_exited" from="MaxPosArea" to="." method="_on_max_pos_body_exited"]
